// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Dashboard test Render the search dashboard with expected data) 1`] = `
<div>
  <div
    class="MuiBox-root css-130f8nx"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          eSpace
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="eSpace loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Web of science
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          5
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Scopus
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          0
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          PubMed
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          0
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Crossref
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          0
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          OpenAlex
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="OpenAlex loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1w9bbf4-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-i9m1j0-MuiLinearProgress-bar1"
      style="transform: translateX(0%);"
    />
  </span>
</div>
`;

exports[`Search Dashboard test Render the search dashboard with random data, all still loading) 1`] = `
<div>
  <div
    class="MuiBox-root css-130f8nx"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          eSpace
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="eSpace loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Web of science
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="Web of science loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Scopus
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="Scopus loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          PubMed
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="PubMed loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Crossref
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="Crossref loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          OpenAlex
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="OpenAlex loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1w9bbf4-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-i9m1j0-MuiLinearProgress-bar1"
      style="transform: translateX(-100%);"
    />
  </span>
</div>
`;

exports[`Search Dashboard test Render the search dashboard with random data, one still loading) 1`] = `
<div>
  <div
    class="MuiBox-root css-130f8nx"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          eSpace
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="eSpace loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Web of science
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          5
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Scopus
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          4
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          PubMed
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-7sqihh-MuiTypography-root"
        >
          12
           
           work(s)
        </p>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          Crossref
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="Crossref loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-78h3u6-MuiTypography-root"
        >
          OpenAlex
        </p>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
      >
        <span
          aria-label="OpenAlex loading"
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
          role="progressbar"
          style="width: 12px; height: 12px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1w9bbf4-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-i9m1j0-MuiLinearProgress-bar1"
      style="transform: translateX(-25%);"
    />
  </span>
</div>
`;
